# race-photo-store

./: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: build.yml  ci.yml
api/: Dockerfile  alembic.ini  requirements-test.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_event_password_lock.py  0003_communications.py
api/app/: admin_session.py  deps.py  event_access.py  main.py  order_access.py  rate_limit.py  schemas.py
api/app/routes/: admin.py  cart.py  checkout.py  config.py  downloads.py  events.py  health.py  orders.py  webhook.py
api/tests/: conftest.py  test_admin.py  test_cart.py  test_checkout.py  test_downloads.py  test_events.py  test_health.py  test_orders.py  test_rate_limit.py  test_webhook.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: adminAuth.ts  adminOrders.ts  adminSettings.ts  adminStats.ts  cart.ts  client.ts  events.ts  orders.ts  siteConfig.ts
frontend/src/components/: Button.tsx  CartDrawer.tsx  (+4 more)
nginx/: Dockerfile  nginx.conf
shared/: pyproject.toml
shared/photostore/: celery_app.py  config.py  email_provider.py  email_templates.py  email_types.py  models.py
worker/: Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
worker/tasks/: __init__.py  archive.py  build_zip.py  send_email.py
worker/tests/: conftest.py  test_archive.py  test_build_zip.py  test_send_email.py
(+14 files in other folders)
