[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "photostore-shared"
version = "0.1.0"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "celery>=5.3",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["photostore*"]
